see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Oct-2009 Andrew Eddie
 + Add block and activation methods to com_users backend.

27-Oct-2009 Louis Landry
# Fixed failure of JUser to load JSON based parameter strings.
^ Changed default behavior of JHtml::date() to use user settings for time zones.
^ Added transparent handling of time zone translation for JForm / JFormFieldCalendar.

25-Oct-2009 Ron Severdia
^ Toolbar UI tweaks
+ New icons
+ New Bluestork CSS
+ Various missing language strings

25-Oct-2009 Ian MacLennan
 # Fixed progress bar image
 # Fixed media manager CSS image paths

25-Oct-2009 Andrew Eddie
 # Fixed [#17088] Error on loading demodata during installation IE.
 # Fixed bug: PHP error in module assignment page of menu edit form.
 # Fixed bug: Move/copy select was not displaying properly in menu item list.

24-Oct-2009 Ron Severdia
# Clean up views & modals
- Remove com_users specific JS & CSS from media folder
$ Language cleanup & new strings
# CSS cleanup

23-Oct-2009 Andrew Eddie
 ^ Fixed new registered type in User Options to be able to select any group.
 ^ Added check to group delete to ensure that Public and Registered can't be removed.
 # Fixed bug in com_users registration controller.
 # Fixed bugs in com_users router.
 # Fixed [#18460] Login does not redirect correctly.
 # Fixed [#18437] JFormFieldCalendar does not include JFormFieldText.
 # Fixed [#18398] [patch] Add Konqueror/undefined user agent patch from J1.5.
 # Fixed [#18368] [patch] for tracker item [#16920] - issue with jtext keys in the user controller.
 # Fixed [#18367] [patch] for tracker item [#16920] - issues with the admin template component.