@@ -27,6 +27,8 @@ USERS_VIEW_EDIT_LEVEL_TITLE=User Manager: Edit Access Level
 USERS_VIEW_NEW_GROUP_TITLE=User Manager: Add New Group
 USERS_VIEW_EDIT_GROUP_TITLE=User Manager: Edit Group
 
+USERS_N_USERS_ACTIVATED=%d user(s) successfully activated.
+
 ; File: /controller.php
 USERS_SUBMENU_GROUPS=User Groups
 USERS_SUBMENU_LEVELS=Access Levels
